--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@ color: #C9E265;
           <a href="zara.html">
             <div class="col">
               <div class="card" style="max-width: 25rem;">
-                <img src="images/zara13.PNG" class="card-img" alt="...">
+                <img src="images/zara13.png" class="card-img" alt="...">
                 <div class="card-img-overlay">
                 </div>
               </div>
