--- a/about.html
+++ b/about.html
@@ -21,6 +21,7 @@
 
     .container {
     display: grid;
+    max-width: 1500px;
     margin:0 auto;
     grid-template-columns:repeat(12, 1fr); 
     }
