--- a/about.html
+++ b/about.html
@@ -118,6 +118,7 @@ a:hover, a:focus, a:active {
 
   .container {
     display: grid;
+    max-width: 1500px;
     margin:0 auto;
     grid-template-columns:repeat(12, 1fr); 
     }
