--- a/givesolar.html
+++ b/givesolar.html
@@ -198,7 +198,7 @@
 
   <h2 style="color: #faa41a;">The Ask</h2>
  <h3> The objective of this project was to create a logo for GiveSolar and develop a comprehensive guide/booklet to define their branding standards.</h3>
-  <a href ="portfolio-/pdf/givesolarbrandguide.pdf" attributes-list><h3 style="color: #faa41a;"><i><u>Download Full-Booklet Here </u> </i></h3></a>  
+  <a href ="/pdf/givesolarbrandguide.pdf" target="_blank"><h3 style="color: #faa41a;"><i><u>Download Full-Booklet Here </u> </i></h3></a>  
 
   <br><br>
 
