--- a/bluestone.html
+++ b/bluestone.html
@@ -174,7 +174,7 @@
 <div class="descript">
 <h2 style="color: #D3D70D;"> Design Editor </h2><br>
 
-<h3>I had the pleasure of serving as the Design Edior for James Madison's Award Winning Yearbook <i> The Bluestone</i><br>
+<h3>I had the pleasure of serving as the Design Edior for James Madison's Award Winning Yearbook <i> The Bluestone.</i><br>
     In this role I planned all design aspects of the book including theme, colors, fonts, and cover design and was 
     responsible for keeping the book cohesive throughout.
 </h3>
