--- a/zara.html
+++ b/zara.html
@@ -212,7 +212,7 @@
 
 <br><br>
 
-<h3 style="color: grey;"><u>USER RESEARCH:</u></h3>
+<h3 style="color: grey;"><u>User Research:</u></h3>
 
   <h3>My user research included 8 James Madison University female students in their early 20’s. I sent out a survey and this survey had questions to determine the user's experience with the app. 
     <br><br>
